Replace use of deprecated method.